jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

DllImport int ECF_Create(INTPTR* ecfHandle);

DllImport int ECF_Destroy(INTPTR* ecfHandle);

DllImport int ECF_GetAbout(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDescricaoGrande(const INTPTR ecfHandle);

DllImport int ECF_GetIntervaloAposComando(const INTPTR ecfHandle);

DllImport int ECF_GetModelo(const INTPTR ecfHandle);

DllImport int ECF_GetPaginaDeCodigo(const INTPTR ecfHandle);

DllImport int ECF_GetUltimoErro(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetIntervaloAposComando(const INTPTR ecfHandle, const int intervalo);

DllImport int ECF_SetModelo(const INTPTR ecfHandle, const int modelo);

DllImport int ECF_SetPaginaDeCodigo(const INTPTR ecfHandle, const int pagina);